[package]
name = "day01"
version = "0.1.0"
edition = '2024'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
itertools = "0.13.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "day17bench"
harness = false
path = "src/day17/bench.rs"